# robotframework-guideline

./: .gitignore  README.md  pyproject.toml
examples/: README.md
examples/config/args/: pabot_args.txt  robot_args.txt  robot_headless_args.txt
examples/libraries/keywords/: amazon_suite.py
examples/libraries/utils/: greeter.py
examples/resources/po/: captcha.resource  landing_page.resource  product.resource  search_results.resource  sign_in.resource  sign_out.resource  top_nav.resource
examples/resources/shared/: global_vars.resource  suite_setup_teardown.resource
examples/tests/ui/: home_page.robot  item_lookup.robot  product_operations.robot  user_authentication.robot
